syntax = "proto3";

package auth; 

service AuthService {
  rpc SignUp(AuthRequest) returns (AuthResponse);
  rpc SignIn(AuthRequest) returns (AuthResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (User);
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
}

message ValidateTokenRequest {
  string accessToken = 1;
}

enum Role {
  ADMIN = 0;
  USER = 1;
}

message User {
  int32 id = 1;
  string email = 2;
  Role role = 3;
  string createdAt = 4;
  string updatedAt = 5;
}